- Added garage temperature sensor. - Added master bedroom fireplace smart switch. - Added master bedroom fibaro motion sensor. - Added power status view. - Completed HVAC automation for master bedroom.

--- a/armoury/group/armoury.yaml
+++ b/armoury/group/armoury.yaml
@@ -20,6 +20,7 @@ garage:
   view: yes
   name: Garage
   entities: 
+    - sensor.garage_temperature
     - sensor.garage_main_door
 outside:
   view: yes
@@ -35,3 +36,8 @@ status:
   entities: 
     - group.status_nas
     - group.status_pihole
+power:
+  view: yes
+  name: Power Usage
+  entities:
+    - group.power_bedroom_01_fireplace
