--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,8 +21,9 @@ config:
 
 http:
   api_password: !secret http_password
-  # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  # base_url: example.duckdns.org:8123
+  base_url: !secret http_hostname
+  ssl_certificate: !secret http_ssl_crt
+  ssl_key: !secret http_ssl_key
 
 # Checks for available updates
 # Note: This component will send some information about your system to
