--- a/armoury/input/select/armoury_house_main_floor_bedroom_01_hvac_mode.yaml
+++ b/armoury/input/select/armoury_house_main_floor_bedroom_01_hvac_mode.yaml
@@ -1,9 +1,9 @@
 bedroom_01_hvac_mode:
-  name: Hvac Mode
+  name: HVAC Mode
   icon: mdi:settings-box
   options:
    - Auto
    - Heat
    - Cool
-   - Off
+   - 'Off'
   initial: Auto
