--- a/automations.yaml
+++ b/automations.yaml
@@ -5,6 +5,10 @@
     entity_id: sensor.garage_main_door
     from: open
     to: closed
+  - platform: state
+    entity_id: sensor.garage_main_door
+    from: closing
+    to: closed
   action:
   - service: notify.armoury_pushover
     data:
@@ -19,6 +23,10 @@
     entity_id: sensor.garage_main_door
     from: closed
     to: open
+  - platform: state
+    entity_id: sensor.garage_main_door
+    from: opening
+    to: open
   action:
   - service: notify.armoury_pushover
     data:
@@ -26,38 +34,40 @@
       title: 'The Armoury: Garage'
       data:
         priority: 0
-- id: alert_home_temperature_too_low
-  alias: 'Alert: Home Temperature Too Low'
+- id: alert_front_door_unlocked
+  alias: 'Alert: Front Door Unlocked'
   trigger:
-  - platform: numeric_state
-    entity_id: sensor.ELINA_Thermostat_temperature
-    below: !secret home_low_heat
+  - platform: state
+    entity_id: lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked
+    from: locked
+    to: unlocked
   action:
   - service: notify.armoury_pushover
     data:
-      message: Home temperature dropped below 16 degrees celcius.
+      message: Front door was unlocked.
       title: 'The Armoury: House'
       data:
-        priority: 0
-- id: alert_home_temperature_too_high
-  alias: 'Alert: Home Temperature Too High'
+        priority: -1
+- id: alert_side_door_unlocked
+  alias: 'Alert: Side Door Unlocked'
   trigger:
-  - platform: numeric_state
-    entity_id: sensor.ELINA_Thermostat_temperature
-    above: !secret home_high_heat
+  - platform: state
+    entity_id: lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked_2
+    from: locked
+    to: unlocked
   action:
   - service: notify.armoury_pushover
     data:
-      message: Home temperature is above 24 degrees celcius.
+      message: Side door was unlocked.
       title: 'The Armoury: House'
       data:
-        priority: 1
+        priority: -1
 - id: alert_master_bedroom_high_heat
   alias: 'Alert: High Heat In Master Bedroom'
   trigger:
   - platform: numeric_state
     entity_id: sensor.Master_Bedroom_Temperature
-    above: !secret home_high_heat
+    above: 24
   action:
   - service: notify.armoury_pushover
     data:
@@ -93,12 +103,39 @@
       title: 'The Armoury: House'
       data:
         priority: -2
+- id: alert_home_temperature_too_low
+  alias: 'Alert: Home Temperature Too Low'
+  trigger:
+  - platform: numeric_state
+    entity_id: sensor.ELINA_Thermostat_temperature
+    below: 16
+  action:
+  - service: notify.armoury_pushover
+    data:
+      message: Home temperature dropped below 16 degrees celcius.
+      title: 'The Armoury: House'
+      data:
+        priority: 0
+- id: alert_home_temperature_too_high
+  alias: 'Alert: Home Temperature Too High'
+  trigger:
+  - platform: numeric_state
+    entity_id: sensor.ELINA_Thermostat_temperature
+    above: 24
+  action:
+  - service: notify.armoury_pushover
+    data:
+      message: Home temperature is above 24 degrees celcius.
+      title: 'The Armoury: House'
+      data:
+        priority: 1
 - id: react_master_bedroom_turn_heat_off
   alias: 'React: Turn Heat Off In Master Bedroom'
   trigger:
   - platform: numeric_state
     entity_id: sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature
-    value_template: '{{ float(states.sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature.state) - float(states.input_number.bedroom_01_target_temperature.state) }}'
+    value_template: '{{ float(states.sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature.state)
+      - float(states.input_number.bedroom_01_target_temperature.state) }}'
     above: 1
   action:
   - service: switch.turn_off
@@ -113,10 +150,18 @@
 - id: react_master_bedroom_turn_heat_on
   alias: 'React: Turn Heat On In Master Bedroom'
   trigger:
-  - platform: numeric_state
+  - above: 1
     entity_id: sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature
-    value_template: '{{ float(states.input_number.bedroom_01_target_temperature.state) - float(states.sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature.state) }}'
-    above: 1
+    platform: numeric_state
+    value_template: '{{ float(states.input_number.bedroom_01_target_temperature.state)
+      - float(states.sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature.state)
+      }}'
+  - above: '1'
+    entity_id: sensor.ELINA_Thermostat_operation_mode
+    platform: numeric_state
+    value_template: '{{ float(states.input_number.bedroom_01_target_temperature.state)
+      - float(states.sensor.FIBARO_System_FGMS001ZW5_Motion_Sensor_Temperature.state)
+      }}'
   action:
   - service: switch.turn_on
     entity_id: switch.Aeotec_ZW096_Smart_Switch_6_Switch
@@ -166,4 +211,3 @@
   action:
   - service: switch.turn_off
     entity_id: switch.Aeotec_ZW096_Smart_Switch_6_Switch
- 
