Added Google Assistant support with ability to control locks and garage door.

--- a/armoury/customize/armoury_garage_primary_door.yaml
+++ b/armoury/customize/armoury_garage_primary_door.yaml
@@ -1,2 +1,6 @@
 sensor.garage_main_door:
   friendly_name: Garage Door
+script.control_garage_door:
+  friendly_name: Open/Close Garage Door
+  google_assistant: true
+  google_assistant_name: Garage Door
