--- a/configuration.yaml
+++ b/configuration.yaml
@@ -42,12 +42,24 @@ conversation:
 
 # Enables support for tracking state changes over time
 history:
+  exclude:
+    domains:
+      - automation
+      - group
+      - media_player
+      - trigger
 
 # View all events in a logbook
 logbook:
+  exclude:
+    domains:
+      - group
 
 # Enables a map showing the location of tracked devices
 map:
+
+# Enables the sun component
+sun:
 
 # Text to speech
 tts:
@@ -86,10 +98,22 @@ zwave:
   usb_path: /dev/ttyACM0
   network_key: !secret zwave_secure_key
 
+# Enable Google Assistant
+google_assistant:
+  project_id: !secret google_assistant_project_id
+  client_id: !secret google_assistant_client_id
+  access_token: !secret google_assistant_access_token
+  agent_user_id: !secret google_assistant_agent_user_id
+  api_key: !secret google_assistant_api_key
+  exposed_domains:
+
+alarm_control_panel: !include armoury/alarm_control_panel.yaml
+
 group: !include_dir_merge_named armoury/group
 sensor: !include_dir_list armoury/sensor
 input_number: !include_dir_merge_named armoury/input/number
 input_select: !include_dir_merge_named armoury/input/select
 
+shell_command: !include armoury/shell_command.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
