--- a/armoury/customize/armoury_house_main_floor_living_room_lock_01.yaml
+++ b/armoury/customize/armoury_house_main_floor_living_room_lock_01.yaml
@@ -1,4 +1,14 @@
 lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked:
   friendly_name: Front Door Lock
+  google_assistant: true
+  google_assistant_name: Front Door
 sensor.living_room_lock_battery:
   icon: mdi:battery
+script.lock_front_door:
+  friendly_name: Lock Front Door
+  google_assistant: true
+  google_assistant_name: Lock Front Door
+script.unlock_front_door:
+  friendly_name: Unlock Front Door
+  google_assistant: true
+  google_assistant_name: Unlock Front Door
