Added new zwave lights to replace insteon products.

--- a/armoury/customize/armoury_house_main_floor_space_lock_01.yaml
+++ b/armoury/customize/armoury_house_main_floor_space_lock_01.yaml
@@ -5,8 +5,8 @@ sensor.space_lock_battery:
 script.lock_side_door:
   friendly_name: Lock Side Door
   google_assistant: true
-  google_assistant_name: Lock Side Door
+  google_assistant_name: Lock Side
 script.unlock_side_door:
   friendly_name: Unlock Side Door
   google_assistant: true
-  google_assistant_name: Unlock Side Door
+  google_assistant_name: Unlock Side
