--- a/armoury/group/armoury_power.yaml
+++ b/armoury/group/armoury_power.yaml
@@ -5,3 +5,10 @@ power_bedroom_01_fireplace:
     - sensor.Aeotec_ZW096_Smart_Switch_6_Energy
     - sensor.Aeotec_ZW096_Smart_Switch_6_Power
     - sensor.Aeotec_ZW096_Smart_Switch_6_Voltage
+power_living_room_lamp_01:
+  name: Living Room Lamp 01
+  entities:
+    - sensor.Aeotec_ZW099_Smart_Dimmer_6_Current
+    - sensor.Aeotec_ZW099_Smart_Dimmer_6_Energy
+    - sensor.Aeotec_ZW099_Smart_Dimmer_6_Power
+    - sensor.Aeotec_ZW099_Smart_Dimmer_6_Voltage
