--- a/armoury/group/armoury_house_basement.yaml
+++ b/armoury/group/armoury_house_basement.yaml
@@ -1,8 +1,10 @@
 house_basement_common_room:
   name: Weight Room
+  control: hidden
   entities:
     - media_player.Armoury_Exercise_Room
 house_basement_office:
   name: Office
+  control: hidden
   entities:
     - light.homeseer_hswd100_wall_dimmer_level
