Added configuration for new OctoPI setup for 3D printer. Made changes to address Google Assistant breaking changes in 0.64.

--- a/armoury/group/armoury.yaml
+++ b/armoury/group/armoury.yaml
@@ -42,6 +42,7 @@ status:
     - group.status_people
     - group.status_nas
     - group.status_pihole
+    - group.status_3d_printer
     - group.status_battery_levels
 power:
   view: yes
