--- a/armoury/group/armoury_status.yaml
+++ b/armoury/group/armoury_status.yaml
@@ -3,6 +3,18 @@ status_people:
   control: hidden
   entities:
     - device_tracker.matsumoto_matsumoto
+status_3d_printer:
+  name: 3D Printer
+  control: hidden
+  entities:
+    - binary_sensor.octoprint_cr10s_printing
+    - binary_sensor.octoprint_cr10s_printing_error
+    - sensor.octoprint_cr10s_current_state
+    - sensor.octoprint_cr10s_job_percentage
+    - sensor.octoprint_cr10s_target_tool0_temp
+    - sensor.octoprint_cr10s_actual_tool0_temp
+    - sensor.octoprint_cr10s_target_bed_temp
+    - sensor.octoprint_cr10s_actual_bed_temp
 status_nas:
   name: Network Attached Storage
   control: hidden
