--- a/armoury/google_assistant_list.yaml
+++ b/armoury/google_assistant_list.yaml
@@ -1,6 +1,8 @@
 - light.Aeotec_ZW099_Smart_Dimmer_6_Level
+- light.chair_lamp
 - light.bedside_left
 - light.bedside_right
+- light.homeseer_hswd100_wall_dimmer_level_3
 - light.homeseer_hswd100_wall_dimmer_level_2
 - light.homeseer_hswd100_wall_dimmer_level
 - light.kitchen_cabinet
