--- a/armoury/group/armoury_house_basement.yaml
+++ b/armoury/group/armoury_house_basement.yaml
@@ -3,6 +3,7 @@ house_basement_common_room:
   control: hidden
   entities:
     - media_player.Armoury_Exercise_Room
+    - light.homeseer_hswd100_wall_dimmer_level_3
 house_basement_office:
   name: Office
   control: hidden
