--- a/armoury/group/armoury_house_main_floor.yaml
+++ b/armoury/group/armoury_house_main_floor.yaml
@@ -1,11 +1,16 @@
+house_main_floor_front_entry:
+  name: Front Entryway
+  control: hidden
+  entities:
+    - binary_sensor.aeotec_zw112_door_window_sensor_6_sensor_3
+    - lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked
+    - light.homeseer_hswd100_wall_dimmer_level_2
 house_main_floor_living_room:
   name: Living Room
   control: hidden
   entities:
-    - binary_sensor.aeotec_zw112_door_window_sensor_6_sensor_2
-    - lock.assa_abloy_yale_push_button_deadbolt_yrd210_locked
-    - light.homeseer_hswd100_wall_dimmer_level_2
     - light.aeotec_zw099_smart_dimmer_6_level
+    - light.chair_lamp
 house_main_floor_hallway:
   name: Hallway
   control: hidden
@@ -44,8 +49,8 @@ house_main_floor_kitchen:
   entities:
     - light.Kitchen_Cabinet
     - media_player.Armoury_Kitchen
-house_main_floor_space:
-  name: Space
+house_main_floor_side_entry:
+  name: Side Entryway
   control: hidden
   entities:
     - binary_sensor.aeotec_zw112_door_window_sensor_6_sensor
