--- a/armoury/group/armoury.yaml
+++ b/armoury/group/armoury.yaml
@@ -3,6 +3,7 @@ default_view:
   name: House (Main)
   entities:
     - alarm_control_panel.Armoury_Alarm_System
+    - group.house_main_floor_front_entry
     - group.house_main_floor_living_room
     - group.house_main_floor_hallway
     - group.house_main_floor_bedroom_01
@@ -10,7 +11,7 @@ default_view:
     - group.house_main_floor_bathroom
     - group.house_main_floor_dining
     - group.house_main_floor_kitchen
-    - group.house_main_floor_space
+    - group.house_main_floor_side_entry
     - group.house_main_floor_laundry_room
 house_basement:
   view: yes
@@ -24,7 +25,7 @@ garage:
   name: Garage
   entities: 
     - sensor.garage_temperature
-    - sensor.garage_main_door
+    - binary_sensor.garage_main_door
     - group.garage_garage
 outside:
   view: yes
